--- a/10H/10H/index.html
+++ b/10H/10H/index.html
@@ -11,14 +11,16 @@
     </div>
     <div>
         <h2>Search by ID</h2>
-        <input type="text" id="userId" size="5" />
+        <input type="text" id="email" size="5" /><br />
+        <input type="text" id="password" size="5" /><br />
+
         <input type="button" value="Search" onclick="find();" />
         <p id="user" />
     </div>
 
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script>
-    var uri = 'api/user';
+    var uri = 'api/Account/register';
 
     $(document).ready(function () {
       // Send an AJAX request
@@ -33,11 +35,11 @@
     });
 
     function formatItem(item) {
-      return item.FirstName + ': SIsi la famille' + item.Password;
+      return item.Email + ': SIsi la famille' + item.Password;
     }
 
     function find() {
-        var id = $('#userId').val();
+        var id = $('#email').val();
       $.getJSON(uri + '/' + id)
           .done(function (data) {
             $('#user').text(formatItem(data));
